fix: cell editing popup is cropped

--- a/src/views/grid/grid.module.css
+++ b/src/views/grid/grid.module.css
@@ -1,14 +1,20 @@
 .root {
-    border: 1px solid var(--border-color);
     font-size: var(--default-font-size);
-    display: flex;
-    flex-direction: column;
     user-select: none;
     position: relative;
     color: var(--foreground-color, #333);
+}
+
+.grid {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid var(--border-color);
     background-color: var(--background-color, #fff);
     border-radius: var(--border-radius, none);
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 /* headers and cells */
